Fix heading nav layout issue

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -153,8 +153,9 @@ $header-nav-link-color-hover: $blue;
 
 .l-header-nav > ul > li > a,
 .l-header-nav > ul > li > span {
+  display: inline-block;
   color: $black;
-  padding: 0.5em;
+  padding: 0 0.5em;
   border-radius: 0.5em;
 }
 
